--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ all: NDesk.DBus.dll monitor.exe
 CSFLAGS=/unsafe
 REFS=Mono.Posix
 
-BUS_SOURCES=Address.cs Connection.cs Authentication.cs Protocol.cs Message.cs Transport.cs Wrapper.cs
+BUS_SOURCES=Address.cs Connection.cs Authentication.cs Protocol.cs Message.cs MessageFilter.cs Transport.cs Wrapper.cs
 UNIX_SOURCES=UnixTransport.cs
 CLR_SOURCES=DBus.cs IntrospectionSchema.cs DProxy.cs Signature.cs
 
