Add ReplySignature support and ifdef proto extensions

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,12 @@
 all: NDesk.DBus.dll monitor.exe
 
-#CSFLAGS=/unsafe
-REFS=Mono.Posix
-
 BUS_SOURCES=Address.cs Connection.cs Authentication.cs Protocol.cs Message.cs MessageFilter.cs Transport.cs Wrapper.cs
 UNIX_SOURCES=UnixTransport.cs
 CLR_SOURCES=DBus.cs IntrospectionSchema.cs DProxy.cs Signature.cs
+
+NDesk.DBus.dll: REFS=Mono.Posix
+
+NDesk.DBus.dll: CSFLAGS=-d:PROTO_REPLY_SIGNATURE -d:PROTO_TYPE_SINGLE
 
 NDesk.DBus.dll: $(BUS_SOURCES) $(UNIX_SOURCES) $(CLR_SOURCES)
 
