Initial work on introspection support

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ all: NDesk.DBus.dll monitor.exe
 
 BUS_SOURCES=Address.cs Connection.cs Authentication.cs Protocol.cs Message.cs MessageFilter.cs Transport.cs Wrapper.cs
 UNIX_SOURCES=UnixTransport.cs
-CLR_SOURCES=DBus.cs IntrospectionSchema.cs DProxy.cs Signature.cs
+CLR_SOURCES=DBus.cs Introspection.cs IntrospectionSchema.cs DProxy.cs Signature.cs
 
 NDesk.DBus.dll: REFS=Mono.Posix
 
