--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,7 +2,7 @@ DBUS_SHARP_PREFIX=..
 
 VPATH=$(DBUS_SHARP_PREFIX)/src
 
-all: test
+all: run test.exe test-sample.exe test-export.exe test-exceptions.exe test-notifications.exe
 
 test.exe: NDesk.DBus.dll Test.cs
 
@@ -18,10 +18,10 @@ test-server.exe: NDesk.DBus.dll TestServer.cs
 
 test-notifications.exe: NDesk.DBus.dll Notifications.cs TestNotifications.cs
 
-test: test.exe
+run:
 	echo '#!/bin/sh' > $@
 	echo 'MONO_PATH=$(DBUS_SHARP_PREFIX)/src:$$MONO_PATH' >> $@
-	echo '$(RUNTIME) $^ $$@' >> $@
+	echo '$(RUNTIME) $$@' >> $@
 	chmod +x $@
 
 
