--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ CLR_SOURCES=DBus.cs Introspection.cs DProxy.cs Signature.cs
 
 NDesk.DBus.dll: REFS=Mono.Posix
 
-NDesk.DBus.dll: CSFLAGS=-d:PROTO_REPLY_SIGNATURE -d:PROTO_TYPE_SINGLE
+NDesk.DBus.dll: CSFLAGS=-d:PROTO_REPLY_SIGNATURE
 
 NDesk.DBus.dll: $(BUS_SOURCES) $(UNIX_SOURCES) $(CLR_SOURCES)
 
