--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 all: NDesk.DBus.dll
 
-BUS_SOURCES=Address.cs AssemblyInfo.cs Connection.cs Authentication.cs Protocol.cs Message.cs MessageFilter.cs MessageReader.cs MessageWriter.cs Server.cs Transport.cs Wrapper.cs
+BUS_SOURCES=Address.cs AssemblyInfo.cs Bus.cs Connection.cs Authentication.cs Protocol.cs Message.cs MessageFilter.cs MessageReader.cs MessageWriter.cs Server.cs Transport.cs Wrapper.cs
 #UNIX_SOURCES=UnixMonoTransport.cs
 UNIX_SOURCES=UnixNativeTransport.cs
 CLR_SOURCES=DBus.cs Introspection.cs DProxy.cs Signature.cs
