--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,7 +2,7 @@ DBUS_SHARP_PREFIX=..
 
 VPATH=$(DBUS_SHARP_PREFIX)/src
 
-all: run test.exe test-sample.exe test-export.exe test-exceptions.exe test-objects.exe test-notifications.exe test-server-tcp.exe
+all: run test.exe test-sample.exe test-export.exe test-exceptions.exe test-objects.exe test-notifications.exe test-server-tcp.exe test-server-native.exe
 
 test.exe: NDesk.DBus.dll Test.cs
 
@@ -19,6 +19,10 @@ test-server-tcp.exe: NDesk.DBus.dll TestServerTcp.cs
 test-server.exe: REFS=Mono.Posix
 
 test-server.exe: NDesk.DBus.dll TestServer.cs
+
+test-server-native.exe: REFS=Mono.Posix
+
+test-server-native.exe: NDesk.DBus.dll TestServerNative.cs
 
 test-notifications.exe: NDesk.DBus.dll Notifications.cs TestNotifications.cs
 
