--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 all: NDesk.DBus.dll
 
 BUS_SOURCES=Address.cs AssemblyInfo.cs Bus.cs BusObject.cs Connection.cs ExportObject.cs Authentication.cs Protocol.cs Mapper.cs Message.cs MessageFilter.cs MessageReader.cs MessageWriter.cs Server.cs Transport.cs Wrapper.cs
-#UNIX_SOURCES=UnixMonoTransport.cs
-UNIX_SOURCES=UnixNativeTransport.cs
+#UNIX_SOURCES=UnixTransport.cs UnixMonoTransport.cs
+UNIX_SOURCES=UnixTransport.cs UnixNativeTransport.cs
 CLR_SOURCES=DBus.cs Introspection.cs DProxy.cs Signature.cs
 
 NDesk.DBus.dll: REFS=Mono.Posix
