Use the keyfile for signing

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,9 +11,9 @@ NDesk.DBus.dll: REFS=Mono.Posix
 
 #NDesk.DBus.dll: CSFLAGS=-d:PROTO_REPLY_SIGNATURE
 
-NDesk.DBus.dll: CSFLAGS=/unsafe
+NDesk.DBus.dll: CSFLAGS=/unsafe -keyfile:../ndesk.snk
 
-NDesk.DBus.dll: $(BUS_SOURCES) $(UNIX_SOURCES) $(CLR_SOURCES)
+NDesk.DBus.dll: $(BUS_SOURCES) $(UNIX_SOURCES) $(CLR_SOURCES) ../ndesk.snk
 
 NDesk.DBus.Portable.dll: CSFLAGS=/unsafe -d:PORTABLE
 
