Respect prefix, DESTDIR

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,6 +21,6 @@ NDesk.DBus.Portable.dll: $(BUS_SOURCES) $(CLR_SOURCES)
 
 .PHONY:
 install: NDesk.DBus.dll
-	$(GACUTIL) -i NDesk.DBus.dll -f -package ndesk-dbus-1.0
+	$(GACUTIL) $(GACUTIL_FLAGS) -i NDesk.DBus.dll -f -package ndesk-dbus-1.0
 
 include ../include.mk
