Make the monitor tool build again

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -4,7 +4,9 @@ VPATH=$(DBUS_SHARP_PREFIX)/src
 
 all: dbus-monitor
 
-dbus-monitor.exe: NDesk.DBus.dll Monitor.cs
+dbus-monitor.exe: CSFLAGS=-keyfile:../ndesk.snk
+
+dbus-monitor.exe: NDesk.DBus.dll Monitor.cs ../ndesk.snk
 
 uuidgen.exe: NDesk.DBus.dll UuidGen.cs
 
