--- a/ndesk-dbus-1.0.pc.in
+++ b/ndesk-dbus-1.0.pc.in
@@ -8,4 +8,4 @@ Name: NDesk.DBus
 Description: Managed D-Bus IPC protocol library and CLR binding
 Version: @VERSION@
 URL: http://www.ndesk.org/DBusSharp
-Libs: -r:${libdir}/mono/ndesk-dbus-1.0/NDesk.DBus.dll
+Libs: -r:${libdir}/mono/@PACKAGE@-@API_VERSION@/NDesk.DBus.dll
