--- a/tools/dbus-monitor.csproj
+++ b/tools/dbus-monitor.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{09A0200F-F3AF-4BD6-9EC4-E7D80D273E4C}</ProjectGuid>
+    <ProjectGuid>{736160C3-844E-43D9-8106-E492D74D92CD}</ProjectGuid>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <NoStandardLibraries>false</NoStandardLibraries>
-    <AssemblyName>NDesk.DBus</AssemblyName>
+    <AssemblyName>dbus-monitor</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <RootNamespace>NDesk.DBus</RootNamespace>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,41 +33,15 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address.cs" />
-    <Compile Include="AssemblyInfoStatic.cs" />
-    <Compile Include="Authentication.cs" />
-    <Compile Include="Bus.cs" />
-    <Compile Include="BusObject.cs" />
-    <Compile Include="Connection.cs" />
-    <Compile Include="DBus.cs" />
-    <Compile Include="DProxy.cs" />
-    <Compile Include="ExportObject.cs" />
-    <Compile Include="Introspection.cs" />
-    <Compile Include="IntrospectionSchema.cs" />
-    <Compile Include="Mapper.cs" />
-    <Compile Include="MatchRule.cs" />
-    <Compile Include="Message.cs" />
-    <Compile Include="MessageFilter.cs" />
-    <Compile Include="MessageReader.cs" />
-    <Compile Include="MessageWriter.cs" />
-    <Compile Include="PendingCall.cs" />
-    <Compile Include="Protocol.cs" />
-    <Compile Include="Signature.cs" />
-    <Compile Include="SocketTransport.cs" />
-    <Compile Include="Transport.cs" />
-    <Compile Include="TypeDefiner.cs" />
-    <Compile Include="TypeImplementer.cs" />
-    <Compile Include="Unix.cs" />
-    <None Include="UnixMonoTransport.cs" />
-    <Compile Include="UnixNativeTransport.cs" />
-    <Compile Include="UnixTransport.cs" />
-    <Compile Include="Wrapper.cs" />
+    <ProjectReference Include="..\src\NDesk.DBus.csproj">
+      <Project>{09A0200F-F3AF-4BD6-9EC4-E7D80D273E4C}</Project>
+      <Name>NDesk.DBus</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="NDesk.DBus.dll.config" />
+    <Compile Include="Monitor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
   <ProjectExtensions>
