Dbus signal thread was using a blocking read. thread.Abort() wasn't always ending the thread. (leading to hanging waiting for the thread to end or hanging on exit) Fixed by sending SIGURG posix event to unblock the read, and then handle the thread exit cleanly. This is prolly and abuse of SIGURG and means dbus sharp will only run on Linux.

--- a/src/NDesk.DBus.csproj
+++ b/src/NDesk.DBus.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="Windows-1252"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -38,6 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
+    <Reference Include="mscorlib" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
