Allow to build from command line
- Allow to build from command line by running: msbuild /t:Build build/dbus-sharp.proj
- Add NUnit from nuget package

NOTE: running the tests from the command line still fails

--- a/.hgignore
+++ b/.hgignore
@@ -1,7 +1,11 @@
 syntax: glob
-NDesk.DBusTests/bin/Debug/
-NDesk.DBusTests/obj/Debug/
+NDesk.DBusTests/bin/
+NDesk.DBusTests/obj/
 src/bin/
 src/obj
 tools/bin/
 tools/obj
+packages/
+*~
+*.userprefs
+build/NuGet.exe
