--- a/NDesk.DBusTests/NDesk.DBusTests.csproj
+++ b/NDesk.DBusTests/NDesk.DBusTests.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FakeTransport.cs" />
     <Compile Include="TypeImplementerTests.cs" />
     <Compile Include="TestByteArrays.cs" />
+    <Compile Include="TypeDefinerTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
