--- a/src/NuGetAssets/NDesk.DBus.nuspec
+++ b/src/NuGetAssets/NDesk.DBus.nuspec
@@ -6,11 +6,11 @@
 	<version>$version$</version>
 	<authors>Alp Toker, Tom Hindle</authors>
 	<owners>Tom Hindle, Eberhard Beilharz</owners>
-	<licenseUrl>https://bitbucket.org/hindlemail/dbus-sharp/src/tip/COPYING</licenseUrl>
-	<projectUrl>https://bitbucket.org/hindlemail/dbus-sharp</projectUrl>
+	<license type="expression">MIT</license>
+	<projectUrl>https://github.com/sillsdev/dbus-sharp</projectUrl>
 	<requireLicenseAcceptance>false</requireLicenseAcceptance>
 	<description>D-Bus IPC protocol library and CLR binding (also known as dbus-sharp)</description>
-	<copyright>Copyright 2015-2017</copyright>
+	<copyright>Copyright 2015-2020</copyright>
 	<tags>dbus</tags>
 	<dependencies>
 	</dependencies>
